--- a/app/src/main/res/layout/stop_list_row.xml
+++ b/app/src/main/res/layout/stop_list_row.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<co.createch.MetroRappid.ui.StopViewRow xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/default_rhythm"
@@ -26,4 +26,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-</RelativeLayout>
+</co.createch.MetroRappid.ui.StopViewRow>
