Dicking around with styling. I don't like what I've got so far. I think a Cards based UI will be the next thing to try.

--- a/app/src/main/res/layout/stop_list_row_small.xml
+++ b/app/src/main/res/layout/stop_list_row_small.xml
@@ -3,18 +3,24 @@
 <co.createch.MetroRappid.ui.StopViewRow xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/default_rhythm"
+    android:layout_height="wrap_content"
     android:padding="@dimen/default_padding">
 
     <TextView
         android:id="@+id/lblStopName"
-        tools:text="Some Stop Name"
+        tools:text="Some Super Long Stop Name That Exceeds Width"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:layout_toLeftOf="@+id/lblDistance"/>
 
     <TextView
         android:id="@+id/lblDistance"
         tools:text="1200 ft"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"/>
@@ -22,6 +28,7 @@
     <TextView
         tools:text="5m 10m 22m"
         android:id="@+id/lblBusTimes"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_below="@+id/lblStopName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
