--- a/app/src/main/res/layout/activity_route_view.xml
+++ b/app/src/main/res/layout/activity_route_view.xml
@@ -8,5 +8,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="co.createch.MetroRappid.ui.RouteViewActivity">
 
+    <TextView
+        android:text="@string/hello_world"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
