--- a/app/src/main/res/layout/activity_route_view.xml
+++ b/app/src/main/res/layout/activity_route_view.xml
@@ -9,6 +9,6 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.MapFragment"/>
+        android:name="co.createch.MetroRappid.ui.MapFragment"/>
 
 </RelativeLayout>
