--- a/app/src/main/res/layout/activity_route_view.xml
+++ b/app/src/main/res/layout/activity_route_view.xml
@@ -6,7 +6,7 @@
     android:padding="0dp">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/map"
+        android:id="@+id/mapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:name="co.createch.MetroRappid.ui.RouteMapFragment"/>
