Change to light theme

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="route_fill">#16163F</color>
     <color name="route_border">#DDDDE8</color>
     <color name="route_shadow">#2C2C2E</color>
+
+    <color name="white">#FFFFFF</color>
 </resources>
